@@ -1,21 +1,12 @@
 Main code:				Daouid <daouid@gmail.com>
-Continued by :				XayOn <thexayon@gmail.com
+Currently mantained by :		XayOn <thexayon@gmail.com
 Tweaks ideas and mod:	CurioCT
 Major help:				Befa
-Special Greetings:		Mister_X, ASPj, Hirte, Goldfish, ml2, andreahaku,Pilotsnipes, STOUF and many others
+Special Greetings:		Mister_X, ASPj, Hirte, Goldfish, ml2, andreahaku, Pilotsnipes, Larry Hajali, STOUF and many others
 
 THX TO EVERYBODY THAT SUPPORT THIS PROJECT
-AND TO EVERYBODY THAT CLICKED MY ADS, 
+AND TO EVERYBODY THAT CLICKED MY ADS , 
 THIS ALLOWED ME TO RAISE AROUND 50 USD AND COVER A FEW OF MY EXPENSES
 
-Non-exhaustive Contributor list:
-BEFA
-CURIOCT
-HIRTE
-MISTER_X
-GOLDFISH
-ML2
-ANDREA
-PILOTSNIPES
-STOUF
-ASPJ
+Note: I deleted the non-exaustive contributors list cause they are all listed on the special greetings part (XayOn)
+Thanks also to Ahmed El-Mahmoudy for screen support patch. 
