@@ -2,10 +2,14 @@
 # Showing options:
 lang="en_us" # This has no real effect yet
 TERMINAL="xterm" # This is the most used term, and the most tested. if you comment this line default x-terminal-emulator will be used
+
+# This way airoscript wont ask you for your resolution everytime executed.
 #export reson="1" # set this to your resolution number
 #export resonset="1" # this is also necesary
+
 # This allows you to use unstable functions.
-	UNSTABLE=1
+#	UNSTABLE=1
+UNSTABLE=0 # Disabled by default. If user wants this functions has to install 3rd party software, so i'll assume user won't wanna this by default.
 
 # You wont usually have to touch this, it's cardctl executable, automatically changed since on kernels 2.4 is carcctl and 2.6 is pccardctl
 	if [ `uname -r|cut -d . -f 2` == "6" ]; then
@@ -24,8 +28,9 @@ TERMINAL="xterm" # This is the most used term, and the most tested. if you comme
 #Allows all terminal windows to stay on screen after the operation they contain is finished
 	DEBUG="0"
 
-# Uncomment next line to make airoscript not launch terminals, just print the command to be executed.
-#	CDCMD="echo "
+# Uncomment next lines to make airoscript not launch terminals, just print the command to be executed.
+#	touch /var/log/airoscript
+#	CDCMD=">/var/log/airoscript echo "
 
 #This is the interface you want to use to perform the attack
 #If you dont set this, airoscript will ask you for interface to use
@@ -46,6 +51,10 @@ TERMINAL="xterm" # This is the most used term, and the most tested. if you comme
 
 #Path to binaries
 	# Acording to the filosofy "user is wrong", i'll put full paths of everything. Change it if you're not wrong =)
+	# Note this can affect some configurations and some systems.
+	# For example, in systems where you have compiled aircrack-ng 
+	# Or in slax it'll be /usr/local/bin or BINDIR and SBINDIR
+	# And, on some systems, mdk3 will be installed on /usr/local/bin/
 	BINDIR="/usr/bin/"
 	SBINDIR="/usr/sbin/"                                  
 	AIRMON=$SBINDIR"airmon-ng"		
@@ -54,6 +63,7 @@ TERMINAL="xterm" # This is the most used term, and the most tested. if you comme
 	AIRCRACK=$BINDIR"aircrack-ng"
 	ARPFORGE=$BINDIR"packetforge-ng"
 	WESSIDE=$SBINDIR"wesside-ng"
+	MDK3=$BINDIR"mdk3"
 	FUNCTIONS="/usr/share/airoscript/airoscfunc.sh"
 	UNSTABLEF="/usr/share/airoscript/airoscfunc_unstable.sh"
 
